<resources>
    <string name="app_name">Accurate\nTranslation</string>
    <string name="translation_tab_name">Translation</string>
    <string name="bookmark_tab_name">Bookmarks</string>
    <string name="field_hint">Type %s text</string>
    <string name="apply_language_select">Apply</string>
    <string name="cancel_language_select">Cancel</string>
    <string name="label_sign_vice_versa">Sign vice versa</string>
    <string name="error_while_getting_response_label">Error!</string>
    <string name="bookmarks_not_found_message">Bookmarks not found</string>
    <string name="success_saving_bookmark_message">Bookmark saved!</string>
    <string name="fail_saving_bookmark_message">Bookmark unsaved!\nTry another one!</string>
    <string name="fail_update_bookmark_message">Bookmark not updated!\nTry another one!</string>
    <string name="language_not_support_for_translate_label">
        This languages not supported for translating
    </string>
    <string name="no_internet_connection_label">
        Seems you have no internet connection
    </string>
    <string name="select_language_message">Select language</string>
    <string name="add_to_bookmarks_button_decs">Add to bookmarks button</string>
    <string name="save_label">Save</string>
    <string name="fish_text_for_bookmark">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
        Aenean commodo ligula eget dolor. Aenean massa.
        Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
        Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
        Nulla consequat massa quis enim.
        Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
        In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</string>
    <string name="translation_bookmark_icon_label">Translation bookmark icon</string>
    <string name="bookmarks_list_is_empty_message">Bookmarks list is empty</string>
    <string name="pre_saving_title">Select or type new, tag for bookmark</string>
    <string name="cancel_label">Cancel</string>
    <string name="type_new_tag_label">Type new tag</string>
    <string name="editing_bookmark_label">Editing bookmark</string>
    <string name="edit_tag_label">Edit tag</string>
    <string name="bookmark_updated_message">Bookmark successfully update</string>
    <string name="delete_label">Delete</string>
    <string name="bookmark_delete_message">Bookmark was deleted!</string>
    <string name="saving_field_empty_message">Fields is empty!\nPlease fill the fields and try again.</string>
    <string name="clear_label">Clear</string>
    <string name="sound_button_description">Sound button</string>
    <string name="sound_not_support_message">This language not support for sound</string>
    <string name="type_bookmark_tag_label">Type bookmark tag</string>
    <string name="mic_message">Say text for translating</string>
    <string name="cam_button_access_description">Picture translation button</string>
    <string name="image_selector_message">Select image source</string>
    <string name="camera_label">Camera</string>
    <string name="gallery_label">Gallery</string>
    <string name="scanned_hint_message">The scanned text will be appear here</string>
    <string name="camera_sourse_message">Picture for translating</string>
    <string name="unrecognized_message">This text could\'t to be recognized. Try another one.</string>
    <string name="translation_label">Translation</string>
    <string name="search_bookmark_label">Search bookmark</string>
</resources>