<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <Toolbar
        android:id="@+id/preSavingDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/pre_saving_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newTagFieldContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/preSavingDialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newTagField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/type_new_tag_label"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listOfPreviousTags"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/tag_item"
        app:layout_constraintTop_toBottomOf="@id/newTagFieldContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/saveBookmarkButton"/>

    <Button
        android:id="@+id/saveBookmarkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_label"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/cancelSavingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/CancelButton"
        android:text="@string/cancel_label"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toStartOf="@id/saveBookmarkButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>